--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DBConnection": "Data source =DESKTOP-JT45RDG;Initial Catalog =ArmyTechTask;Integrated security=true"
+    "DBConnection": "Data source =.;Initial Catalog =ArmyTechTask;Integrated security=true"
   },
   "AllowedHosts": "*"
 }
